[package]
name = "plru"
version = "0.1.1"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Implementation of concurrent (lockless) pseudo-LRU cache replacement policy."
repository = "https://github.com/ticki/plru"
documentation = "https://docs.rs/plru"
license = "MIT"
keywords = ["cache", "lru", "pseudolru", "page", "concurrent"]
exclude = ["target", "CHANGELOG.md", "Cargo.lock"]

[features]
no_std = []
